--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   <!-- Ramen Menu -->
   <div id="ramen-menu">
     <!-- Ramen Images Here -->
+    <!--<img class="detail-image" src="./assets/ramen/gyukotsu.jpg" alt="A steaming bowl of Gyukotsu ramen" /> -->
   </div>
 
   <!-- Ramen Details -->
   <div id="ramen-detail">
-    <img class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
-    <h2 class="name">Insert Name Here</h2>
-    <h3 class="restaurant">Insert Restaurant Here</h3>
+    <img id="detail-image" class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
+    <h2 id="ramen-name" class="name">Insert Name Here</h2>
+    <h3 id="restaurant-name" class="restaurant">Insert Restaurant Here</h3>
   </div>
 
   <h3>Rating:</h3>
