completed my final project

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ramen Rater</title>
+  <title>Kitty Letter</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <script defer type="text/javascript" src="./src/index.js"></script>
 </head>
 
 <body>
   <header>
-    <h3>Ramen Rater</h3>
+    <h3 id="kitty-letter">Kitty Letter</h3>
   </header>
 
   <!-- Ramen Menu -->
@@ -22,8 +22,8 @@
   <!-- Ramen Details -->
   <div id="ramen-detail">
     <img id="detail-image" class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
-    <h2 id="ramen-name" class="name">Insert Name Here</h2>
-    <h3 id="restaurant-name" class="restaurant">Insert Restaurant Here</h3>
+    <h2 id="ramen-name" class="name">Kitty name here</h2>
+    <h3 id="restaurant-name" class="restaurant">What's the breed bud?</h3>
   </div>
 
   <h3>Rating:</h3>
@@ -35,12 +35,13 @@
     Insert comment here
   </p>
 
+  <!-- <div class="right"> -->
   <!-- New Ramen Form -->
   <form id="new-ramen">
-    <h4>Add New Ramen</h4>
+    <h4>Wanna add your kitty?</h4>
     <label for="name">Name: </label>
     <input type="text" name="name" id="new-name" />
-    <label for="restaurant">Restaurant: </label>
+    <label for="restaurant">Breed: </label>
     <input type="text" name="restaurant" id="new-restaurant" />
     <label for="image">Image: </label>
     <input type="text" name="image" id="new-image" />
@@ -48,8 +49,9 @@
     <input type="number" name="rating" id="new-rating" />
     <label for="new-comment">Comment: </label>
     <textarea name="new-comment" id="new-comment"></textarea>
-    <input type="submit" value="Create" />
+    <input type="submit" value="Abra Ka-Kitty!" />
   </form>
+  <!-- </div> -->
 
 </body>
 
